--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.okapi.not2do"
+        applicationId "bil495.not2do"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -26,6 +26,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    // CardView
+    compile 'com.android.support:cardview-v7:25.1.0'
+    testCompile 'junit:junit:4.12'
 }
