--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     // CardView
     compile 'com.android.support:cardview-v7:25.1.0'
+    //Like button
+    compile 'com.sackcentury:shinebutton:0.1.9'
     testCompile 'junit:junit:4.12'
 }
