--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,15 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     // CardView
     compile 'com.android.support:cardview-v7:25.1.0'
+
+
+    compile 'com.google.firebase:firebase-core:11.0.4'
+    compile 'com.google.firebase:firebase-messaging:11.0.4'
+
     testCompile 'junit:junit:4.12'
 
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.google.firebase:firebase-messaging:11.0.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
